--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 	margin : 30px;
 }
 
-form {
+form.form-class {
     max-width: 400px;
     margin: 20px auto;
     padding: 20px;
@@ -24,9 +24,19 @@ label {
     margin-bottom: 8px;
 }
 
+.center-align {
+	text-align: center;
+}
+
+.margin-panel {
+	width: 90%;
+	margin: 20px;
+	padding: 10px;
+}
+
 /* Style the input fields */
-input {
-    width: 100%;
+input.input-class {
+    width: 90%;
     padding: 10px;
     margin-bottom: 16px;
     border: 1px solid #ccc;
@@ -50,6 +60,8 @@ input[type="submit"].submit-button:hover {
     background-color: #4C9950;
     color: white;
     cursor: pointer;
+    margin: 10px;
+    padding: 5px;
 }
 
 .submit-button:hover {
@@ -76,6 +88,16 @@ a:visited {
     color: #34495e; /* Set the color for visited links */
 }
 
+
+.link {
+	background-color: #BBFF99;
+    color: #3498db; /* Set the default text color */
+    text-decoration: none; /* Remove underline by default */
+    transition: color 0.3s; /* Smooth transition for color change */
+    margin: 20px;
+    padding: 10px;
+    cursor:pointer;
+}
 
 nav.navigation-bar {
     color: green;
