--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,14 @@ label.highlight-green {
 label.highlight-green:hover {
 	background-color : #aaddaa;
 }
+
+.score-board {
+    font-size : 40px;
+    text-align: center;
+}
+
+.score-board > .score-number {
+    margin-left: 40px;
+    font-size : 200px;
+
+}
